--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>WebDev2 Act 05 - Kimberly Cabagti</title>
-  </head>
-  <body>
-  <h1>
+<html>
+<head>
+<title>
+     WebDev2 Act 05 - Kimberly Cabagti
+</title>
+  <link rel = "stylesheet" type = "text/css" href = "style.css">
+</head>
+<body>
+<h1>
   Preparing for clone
   </h1>
-  </body>
-  </html>
+</body>
+</html>
